force-app/main/default/objects/Batch_Error_Log__c/Batch_Error_Log__c.object-meta.xml
<CustomObject>
    <label>Batch Error Log</label>
    <nameField>
        <label>Batch Error Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Error Logs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>