force-app/main/default/objects/Batch_Error_Log__c/fields/Failure_Date__c.field-meta.xml
<CustomField>
    <fullName>Failure_Date__c</fullName>
    <inlineHelpText>Capture Failure Date</inlineHelpText>
    <label>Failure Date</label>
    <type>Date</type>
</CustomField>