force-app/main/default/objects/Batch_Error_Log__c/fields/Failure_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Failure_Job_ID__c</fullName>
    <label>Failure Job ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>