force-app/main/default/objects/Batch_Error_Log__c/fields/Failure_Message__c.field-meta.xml
<CustomField>
    <fullName>Failure_Message__c</fullName>
    <label>Failure Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>