force-app/main/default/objects/Batch_Error_Log__c/fields/Scenario__c.field-meta.xml
<CustomField>
    <fullName>Scenario__c</fullName>
    <description>Scenario</description>
    <inlineHelpText>Scenario of Service Contract</inlineHelpText>
    <label>Scenario</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SC Created Yesterday</fullName>
            </value>
            <value>
                <fullName>SCs with End Date - today = 121 days</fullName>
            </value>
            <value>
                <fullName>SCs with End Date - today = 120 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>