force-app/main/default/objects/Batch_Error_Log__c/fields/Service_Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract_Id__c</fullName>
    <label>Service Contract Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>