force-app/main/default/objects/Batch_Error_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Error: Default value.
Fixed: Data correction is done on the Original Record.
Completed: Reprocessed.
No Action: Nothing to do.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
                <default>true</default>
                <label>Error</label>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>No Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>