force-app/main/default/objects/Batch_Error_Log__c/listViews/Opp_Acv_Update_Batch.listView-meta.xml
<ListView>
    <fullName>Opp_Acv_Update_Batch</fullName>
    <columns>NAME</columns>
    <columns>Class_Name__c</columns>
    <columns>Object_ID__c</columns>
    <columns>Failure_Message__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class_Name__c</field>
        <operation>equals</operation>
        <value>OppAcvUpdateBatch</value>
    </filters>
    <label>Opp Acv Update Batch</label>
</ListView>