force-app/main/default/objects/Batch_Error_Log__c/listViews/ServiceContractCreateRenewalBatch_Errors.listView-meta.xml
<ListView>
    <fullName>ServiceContractCreateRenewalBatch_Errors</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Class_Name__c</columns>
    <columns>Scenario__c</columns>
    <columns>Service_Contract_Id__c</columns>
    <columns>Failure_Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class_Name__c</field>
        <operation>equals</operation>
        <value>ServiceContractCreateRenewalBatch</value>
    </filters>
    <label>ServiceContractCreateRenewalBatch Errors</label>
</ListView>